# lovia

./: .env.example  .gitignore  AGENTS.md  LICENSE  README-zh.md  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: architecture.md  ratio-calibration.md
docs/en/: README.md  agents.md  api-reference.md  budgets.md  built-in-tools.md  cancellation.md  concepts.md  context.md  deployment.md  eval.md  guardrails.md  http-api.md  human-in-the-loop.md  installation.md  mcp.md  memory.md  multi-agent.md  observability.md  plugins.md  providers.md  quickstart.md  reliability.md  retries.md  running.md  sessions-and-checkpoints.md  skills.md  streaming.md  structured-output.md  testing.md  todo.md  tools.md  troubleshooting.md  web-server.md  web-ui.md  web.md  workspace.md
docs/stylesheets/: extra.css
docs/zh/: README.md  agents.md  api-reference.md  budgets.md  built-in-tools.md  cancellation.md  concepts.md  context.md  deployment.md  eval.md  guardrails.md  http-api.md  human-in-the-loop.md  installation.md  mcp.md  memory.md  multi-agent.md  observability.md  plugins.md  providers.md  quickstart.md  reliability.md  retries.md  running.md  sessions-and-checkpoints.md  skills.md  streaming.md  structured-output.md  testing.md  todo.md  tools.md  troubleshooting.md  web-server.md  web-ui.md  web.md  workspace.md
examples/: 01_hello.py  02_tools.py  03_streaming.py  04_structured_output.py  05_handoff.py  05_sessions.py  06_agent_as_tool.py  06_multimodal.py  07_handoff.py  07_session.py  08_agent_as_tool.py  08_skills.py  09_compat_provider.py  09_model_settings.py  10_custom_provider.py  10_hooks.py  11_approval.py  11_hooks.py  12_approval.py  12_multimodal.py  13_budget_and_cancel.py  13_guardrails.py  14_guardrails.py  14_reliability.py  15_resume.py  16_steering.py  16_web_serve.py  17_context_compaction.py  17_responses_reasoning.py  17_web_api.py  18_context_policy.py  18_dependencies.py  19_dynamic_instructions.py  19_workspace.py  20_builtins.py  20_custom_provider.py  20_workspace_agent.py  21_dx.py  21_todos.py  22_sandbox.py  (+24 more)
examples/builtins/: 01_http.py  02_time.py  03_think.py  04_fs.py  05_shell.py  06_code.py  07_search.py  08_todo.py  09_human.py  10_all_in_one.py  README.md
examples/tools/: 01_http.py  02_time.py  03_search.py  03_think.py  04_human.py  07_search.py  08_todo.py  09_human.py  README.md
examples/workflows/: 01_prompt_chaining.py  02_routing.py  03_parallelization.py  04_orchestrator_workers.py  05_evaluator_optimizer.py  06_autonomous_agent.py  README.md
lovia/: __init__.py  _types.py  agent.py  approvals.py  checkpointer.py  cli.py  content.py  context_policy.py  events.py  exceptions.py  guardrails.py  handoff.py  hooks.py  http_config.py  items.py  log_config.py  mcp.py  memory.py  messages.py  output.py  parts.py  plugins.py  reliability.py  run_context.py  runner.py  schema.py  session.py  skills.py  steering.py  testing.py  tools.py  tracing.py  transcript.py
lovia/builtins/: __init__.py  code.py  fs.py  http.py  human.py  search.py  shell.py  think.py  time.py  todo.py
lovia/context/: __init__.py  archive.py  compaction.py  policy.py  prompts.py  render.py  stages.py  state.py  store.py  summarizer.py  tokens.py
lovia/eval/: __init__.py  checks.py  judge.py  report.py  runner.py
lovia/plugins/: __init__.py  base.py  mcp.py  memory.py  skills.py  todo.py
lovia/providers/: __init__.py  _content.py  _http.py  _sse.py  _windows.py  anthropic.py  base.py  openai_chat.py  openai_responses.py
lovia/runtime/: checkpoint.py  loop.py  model_turn.py  result.py  resume.py  run_state.py  state.py  tool_calls.py  utils.py
lovia/sandbox/: __init__.py  audit.py  errors.py  local.py  paths.py  protocol.py  sandbox.py  tools.py  types.py  wire.py
lovia/stores/: __init__.py  _sqlite.py  checkpointer.py  memory.py  session.py  sqlite.py  sqlite_checkpointer.py
lovia/todos/: __init__.py  plugin.py  store.py  types.py
lovia/tools/: __init__.py  _sandbox.py  base.py  coding_tools.py  edit_file.py  files.py  glob.py  http.py  human.py  list_dir.py  page.py  read_file.py  recall.py  search.py  shell.py  think.py  time.py  todo.py  write_file.py
lovia/web/: __init__.py  __main__.py  _deps.py  app.py  approvals.py  attachments.py  auth.py  markdown.py  media.py  routes.py  scheduler.py  scheduling.py  schemas.py  setup.py  sse.py  store.py  supervisor.py  titles.py  ui.py  vision.py
lovia/workspace/: __init__.py  audit.py  command_guard.py  errors.py  local.py  paths.py  policy.py  protocol.py  tools.py  types.py  workspace.py
scripts/: check_docs.py
tests/: README-zh.md  README.md  conftest.py  scripted_provider.py  test_agent_posture.py  test_anthropic_live.py  test_anthropic_translation.py  test_appendonly_persistence.py  test_approval.py  test_builtins.py  test_checkpointer.py  test_cli_entry.py  test_context_policy.py  test_dx.py  test_dynamic_instructions.py  test_guardrails.py  test_handoff.py  test_hooks.py  test_http_config.py  test_items.py  test_log_config.py  test_mcp.py  test_memory.py  test_messages.py  test_model_from_env.py  test_output_repair.py  test_parts.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_plugins.py  test_provider_registry.py  test_provider_utils.py  test_providers_anthropic.py  test_providers_openai.py  test_providers_openai_responses.py  test_reliability.py  test_runner.py  test_runner_entries.py  (+14 more)
tests/context/: __init__.py  helpers.py  (+13 more)
(+126 files in other folders)
