[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovia"
version = "0.4.1"
description = "A lightweight and elegant Agent framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "wakenee", email = "wakenee@hotmail.com" }]
keywords = ["agent", "llm", "ai", "framework"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dotenv = ["python-dotenv>=1.0.0"]
tools = ["ddgs>=7.0"]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sse-starlette>=2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/cymoo/lovia"
Repository = "https://github.com/cymoo/lovia"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
