[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovia"
version = "0.5.2"
description = "A lightweight and elegant Agent framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "wakenee", email = "wakenee@hotmail.com" }]
keywords = ["agent", "llm", "ai", "framework"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0.0"]
mcp = ["mcp>=1.0"]
tools = [
    "ddgs>=7.0",
]
rich = [
    "rich>=13.7",
]
prefect = [
    "prefect>=3.0",
]
web = [
    "fastapi>=0.110",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.27",
]
examples = [
    "ddgs>=7.0",
    "prefect>=3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7",
]
dev = [
    "build>=1.2",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "sse-starlette>=2.1",
    "twine>=5.0",
    "uvicorn[standard]>=0.27",
]

[project.urls]
Homepage = "https://github.com/cymoo/lovia"
Repository = "https://github.com/cymoo/lovia"

