[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lovia"
version = "0.8.34"
description = "A lightweight and elegant Agent framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "wakenee", email = "wakenee@hotmail.com" }]
keywords = ["agent", "llm", "ai", "framework"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
ddg = ["ddgs>=7.0"]
web = [
    "croniter>=2.0",
    "ddgs>=7.0",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "truststore>=0.9",
    "tzdata; platform_system == 'Windows'",
    "uvicorn[standard]>=0.27",
]
examples = [
    "ddgs>=7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-static-i18n>=1.2",
]
dev = [
    "build>=1.2",
    "croniter>=2.0",
    "fastapi>=0.110",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "ruff>=0.5",
    "sse-starlette>=2.1",
    "twine>=5.0",
    "uvicorn[standard]>=0.27",
]

[project.scripts]
lovia = "lovia.cli:main"

[project.urls]
Homepage = "https://github.com/cymoo/lovia"
Repository = "https://github.com/cymoo/lovia"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["lovia"]

# Optional third-party deps without type stubs. ``strict`` enables
# warn_unused_ignores, so prefer module-level suppression here over inline
# ``# type: ignore`` comments that go stale when the dep is installed.
[[tool.mypy.overrides]]
module = ["ddgs.*", "croniter.*", "truststore.*"]
ignore_missing_imports = true
